# rust-axum-async-graphql-postgres-redis-starter

./: .env  Cargo.toml  Dockerfile  README.md
src/: graphql.rs  lib.rs  main.rs  postgres.rs  redis.rs  simdjson.rs
src/dataloaders/: users.rs
src/graphql/: users_mutation.rs  users_query.rs  users_subscription.rs
src/types/: users.rs
