[package]
name = "rust-axum-async-graphql-postgres-redis-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-graphql = { version = "7.0.15", features = [
    "apollo_tracing",
    "dataloader",
] }
async-graphql-axum = "7.0.15"
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0" }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.21.0"
dotenvy = "0.15.7"
firebase-auth = { version = "0.5.0", default-features = false, features = [
    "axum",
] }
itertools = "0.14.0"
rayon = "1.10.0"
redis = { version = "0.29.1", features = ["aio"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_with_macros = "3.12.0"
simd-json = { version = "0.15.0" }
thiserror = "2.0.12"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
codegen-units = 1
lto = true

[lib]
name = "rust_axum_async_graphql_postgres_redis_starter"
crate-type = ["lib"]
path = "src/lib.rs"
doctest = false
