[package]
name = "rust-axum-async-graphql-postgres-redis-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-graphql = { version = "7.0.17", features = [
    "apollo_tracing",
    "dataloader",
] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.4", features = ["ws"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1" }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.24.0"
bytes = "1.10.1"
dotenvy = "0.15.7"
firebase-auth = { version = "0.5.1", default-features = false, features = [
    "axum",
] }
http = "1.3.1"
jsonwebtoken = "=9.1.0"
mime = "0.3.17"
redis = { version = "0.32.4", features = ["aio"] }
serde = "1.0.219"
serde_json = "1.0.141"
simd-json = "0.15.1"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
codegen-units = 1
lto = true

[lib]
name = "rust_axum_async_graphql_postgres_redis_starter"
crate-type = ["lib"]
path = "src/lib.rs"
doctest = false
